added new custom columns : inventory fields for the products grid + minor fixes

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -52,6 +52,7 @@
 "Choose ""Yes"" if the field contains multiple values separated by a given string","Choisissez ""Oui"" si le champ contient de multiples valeurs séparées par une chaîne donnée"
 "Choose ""Yes"" if the filter must match the entire value, and not just be contained within","Choisissez ""Oui"" si le filtre doit correspondre à la valeur entière, et pas seulement être contenu dedans"
 "Choose ""Yes"" to display IDs instead of names","Choisissez ""Oui"" pour afficher les identifiants plutôt que les noms"
+"Choose ""Yes"" to filter values that either use config or not. Else, the filter type will depend on the type of the field","Choisissez ""Oui"" pour filtrer les valeurs qui utilisent les paramètres de la configuration ou pas. Sinon, le type de filtre dépendra du type du champ"
 "Choose Categories To Filter","Choisir les catégories à filtrer"
 "Choose Editable Columns","Choisir les colonnes éditables"
 "Choose Default Profile","Choisir le profil par défaut"
@@ -78,6 +79,8 @@
 "Company","Société"
 "Complementary Exceptions","Exceptions complémentaires"
 "Complementary Exceptions Handling Mode","Mode de gestion des exceptions complémentaires"
+"Config Values Prefix","Préfixe des valeurs de la configuration"
+"Config Values Suffix","Suffixe des valeurs de la configuration"
 "Configuration","Configuration"
 "Continue","Continuer"
 "Controller Name","Nom du contrôleur"
@@ -172,6 +175,7 @@
 "Field Name","Nom du champ"
 "Filter images on name","Filtrer les images sur le nom"
 "Filter Mode","Mode de filtrage"
+"Filter on ""Use Config""","Filtrer sur ""Utiliser les paramètres de la configuration"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""Custom Filter - Operator"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cette valeur et celle du champ ""Filtre personnalisé - Opérateur"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""Custom Filter - Number"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cet opérateur et celle du champ ""Filtre personnalisé - Nombre"""
 "Filters","Filtres"
@@ -233,6 +237,7 @@
 "Magento Model","Modèle Magento"
 "Manage Custom Grids","Gérer les grilles personnalisées"
 "Manage Options Source","Gérer les sources d'options"
+"Maximum Qty in Cart","Quantité maximum dans le panier"
 "Medium","Moyen"
 "Merge Values (Custom on Original)","Fusionner les valeurs (personnalisée sur originale)"
 "Merge Values (Natural Order)","Fusionner les valeurs (ordre naturel)"
@@ -241,6 +246,7 @@
 "Method","Méthode"
 "Middle","Milieu"
 "Middle Name","Second prénom"
+"Minimum Qty in Cart","Quantité minimum dans le panier"
 "Missing","Manquante"
 "Model","Modèle"
 "Module Name","Nom du module"
@@ -285,6 +291,7 @@
 "Please select options sources to update","Merci de sélectionner des sources d'options à mettre à jour"
 "Polls","Sondages"
 "Prefix","Préfixe"
+"Prefix that will be prepended to the values coming from config","Préfixe qui sera ajouté aux valeurs venant de la configuration"
 "Price","Prix"
 "Product","Produit"
 "Products","Produits"
@@ -297,6 +304,7 @@
 "Put here the name of the parameter where to look for store view IDs, it will be used when the current store view ID could not be found in the rewrited grid.<br />If none is set, ""<strong>store</strong>"" value will be used.","Renseignez ici le nom du paramètre où chercher les IDs de vue magasin, il sera utilisé quand l'ID de la vue magasin courante n'aura pas pû être trouvé dans la grille réécrite.<br />Si rien n'est renseigné, la valeur ""<strong>store</strong>"" sera utilisée."
 "Quantity in Carts","Quantité dans des paniers"
 "Quantity in Wishlists","Quantité dans des listes d'envies"
+"Qty to become Out of Stock","Quantité pour devenir épuisé"
 "Remove Custom Default Grid Parameters:","Supprimer les défauts personnalisés de la grille :" 
 "Remove Empty Value","Enlever la valeur vide"
 "Renderer is not specified","Le renderer n'est pas spécifié"
@@ -330,6 +338,7 @@
 "Skip Website Label","Passer le libellé du site web"
 "Sort","Tri"
 "Sort Direction","Direction du tri"
+"Sorting does not take config values into account, so that products that use config may not be sorted consistently","Le tri ne prend pas les valeurs de la configuration en compte, de sorte que les produits les utilisant peuvent ne pas être triés de façon cohérente"
 "Sorting is based on a csv string of category IDs","Le tri est basé sur une chaîne csv d'identifiants de catégories"
 "Special","Spécial"
 "State/Province","Etat/Province"
@@ -341,6 +350,7 @@
 "Store Views","Vues magasin"
 "Street Address","Adresse"
 "Suffix","Suffixe"
+"Suffix that will be appended to the values coming from config","Suffixe qui sera ajouté aux valeurs venant de la configuration"
 "System","Système"
 "Tax Classes","Classes de taxe"
 "Tax Rates","Taux de taxe"
