added "customer group" custom column to the orders grid

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -187,6 +187,7 @@
 "Force Custom Value","Forcer la valeur personnalisée"
 "Force Original Value","Forcer la valeur originale"
 "Force use of default options source","Forcer l'utilisation de la source d'options par défaut"
+"Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Forcing a value only applies when it does exist","Forcer une valeur ne s'applique que lorsqu'elle existe"
 "Forcing or merging a value only applies when it does exist","Forcer ou fusionner une valeur ne s'applique que lorsqu'elle existe"
 "From Result:","A partir du résultat :"
@@ -204,6 +205,7 @@
 "Grid Infos","Infos grille"
 "Grid Type","Type de grille"
 "Grids Customization","Personnalisation des grilles"
+"Group","Groupe"
 "Height","Hauteur"
 "Help","Aide"
 "ID","ID"
@@ -412,6 +414,7 @@
 "Use Column Currency","Utiliser la devise de la colonne"
 "Use Config","Utiliser la configuration"
 "Use Customized Columns","Utiliser les colonnes personnalisées"
+"Use Default Behaviour","Utiliser le comportement par défaut"
 "Use Default Parameters","Utiliser les paramètres par défaut"
 "Use Default Value","Utiliser la valeur par défaut"
 "Use drag'n'drop for sorting columns","Utiliser le drag'n'drop pour le tri des colonnes"
