added a custom column to display a base items list on the orders grid

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -21,6 +21,7 @@
 "All (%s)","Tous (%s)"
 "Allow","Autoriser"
 "Allow Filtering On Time","Permettre de filtrer sur le temps"
+"An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de commande"
 "Apply","Appliquer"
 "Apply Configuration","Appliquer la configuration"
 "Apply PHP function nl2br()","Applique la fonction PHP nl2br()"
@@ -109,6 +110,7 @@
 "Date","Date"
 "Date + Time","Date + temps"
 "Date / Date + Time","Date / Date + temps"
+"Default","Défaut"
 "Default (Last Set Value is Used)","Défaut (la dernière valeur spécifiée est utilisée)"
 "Default Options Source","Source d'options par défaut"
 "Default Values","Valeurs par défaut"
@@ -141,6 +143,7 @@
 "Displays the number of wishlists containing each product","Affiche le nombre de listes d'envies contenant chaque produit"
 "Displays the quantity of each product contained in carts","Affiche la quantité de chaque produit contenue dans des paniers"
 "Displays the quantity of each product contained in wishlists","Affiche la quantité de chaque produit contenue dans des listes d'envies"
+"Displays the same items list as the order view page","Affiche la même liste d'articles que la fiche de commande"
 "Displays the status and colorizes the row","Affiche le statut et colorise la ligne"
 "Displays the order's store view","Affiche la vue magasin de la commande"
 "Drag'n'drop is the most convenient way for sorting columns, but imposes their order number, and may be slow in some cases.<br />Choose ""<strong>No</strong>"" to specify columns orders numbers directly in corresponding text fields.","Le drag'n'drop est la manière la plus commode de trier les colonnes, mais impose leur numéro d'ordre, et peut être lent dans certains cas.<br />Choisissez ""<strong>Non</strong>"" pour spécifier les numéros d'ordre de colonnes directement dans les champs texte correspondants."
@@ -209,6 +212,7 @@
 "Height","Hauteur"
 "Help","Aide"
 "ID","ID"
+"If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
 "If no ID is found, then the value corresponding to the given key will be displayed. If none is set, ""store_name"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""store_name"" sera utilisé"
 "If no value is set, "","" will be used","Si aucune valeur n'est définie, "","" sera utilisé"
@@ -220,13 +224,13 @@
 "Images URLs are used as images titles, or as result if images are not displayed or on results export. If you choose ""No"", only the images paths within the media/catalog directory will be displayed.","Les URLs d'images sont utilisées comme titres d'images, ou comme résultat si les images ne sont pas affichées ou à l'export des résultats. Si vous choisissez ""Non"", seulement le chemin des images dans le répertoire media/catalog sera affiché"
 "Image Width","Largeur d'image"
 "Include Inactive Carts","Inclure les paniers inactifs"
-"If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "Indicate here the position of the column among all ones sharing the same field name. If given position does not exist or is empty, then the first corresponding column will be used","Indiquez ici la position de la colonne parmi toutes celles partageant le même nom de champ. Si la position donnée n'existe pas ou est vide, alors la première colonne correspondante sera utilisée"
 "Indicate here the string that will be used to separate categories in each full path. If none is set, "" > "" will be used","Indiquez ici la chaîne qui sera utilisée pour séparer les catégories dans chaque chemin complet. Si aucune n'est définie, "" > "" sera utilisé"
 "Indicate here the string that will be used each product's category values. If none is set, "", "" will be used","Indiquez ici la chaîne qui sera utilisée pour séparer les valeurs des catégories de chaque produit. Si aucune n'est définie, "", "" sera utilisé"
 "Instance","Instance"
 "Invalid dimension given : ""%s""","Dimension invalide donnée : ""%s"""
 "IP Address","Adresse IP"
+"Items","Articles"
 "Label","Libellé"
 "Label Key","Clé du libellé"
 "Last Name","Nom"
@@ -426,9 +430,10 @@
 "Varien_Object Collection","Collection de Varien_Object"
 "View Grids Informations","Voir les informations des grilles"
 "Visible","Visible"
+"Width","Largeur"
 "Wildcard for single character","Wildcard pour un seul caractère"
 "Wildcard for multiple characters","Wildcard pour de multiples caractères"
-"Width","Largeur"
+"Will display nothing when exporting results","N'affichera rien à l'export des résultats"
 "Wishlists Number","Nombre de listes d'envies"
 "With","Avec"
 "With CMS blocks templates processor","Avec le processeur de templates de blocs CMS"
