quantity editable on products grid (thanks to senders for his support on this one)

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -212,7 +212,6 @@
 "Height","Hauteur"
 "Help","Aide"
 "ID","ID"
-"If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
 "If no ID is found, then the value corresponding to the given key will be displayed. If none is set, ""store_name"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""store_name"" sera utilisé"
 "If no value is set, "","" will be used","Si aucune valeur n'est définie, "","" sera utilisé"
@@ -225,6 +224,7 @@
 "Images URLs are used as images titles, or as result if images are not displayed or on results export. If you choose ""No"", only the images paths within the media/catalog directory will be displayed.","Les URLs d'images sont utilisées comme titres d'images, ou comme résultat si les images ne sont pas affichées ou à l'export des résultats. Si vous choisissez ""Non"", seulement le chemin des images dans le répertoire media/catalog sera affiché"
 "Image Width","Largeur d'image"
 "Include Inactive Carts","Inclure les paniers inactifs"
+"If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "Indicate here the position of the column among all ones sharing the same field name. If given position does not exist or is empty, then the first corresponding column will be used","Indiquez ici la position de la colonne parmi toutes celles partageant le même nom de champ. Si la position donnée n'existe pas ou est vide, alors la première colonne correspondante sera utilisée"
 "Indicate here the string that will be used to separate categories in each full path. If none is set, "" > "" will be used","Indiquez ici la chaîne qui sera utilisée pour séparer les catégories dans chaque chemin complet. Si aucune n'est définie, "" > "" sera utilisé"
 "Indicate here the string that will be used each product's category values. If none is set, "", "" will be used","Indiquez ici la chaîne qui sera utilisée pour séparer les valeurs des catégories de chaque produit. Si aucune n'est définie, "", "" sera utilisé"
@@ -367,6 +367,7 @@
 "Terms and Conditions","Conditions générales de vente"
 "Text","Texte"
 "The ""%s"" custom column could not be applied : ""%s""","La colonne personnalisée ""%s"" n'a pû etre appliquée : ""%s"""
+"The ""Mage_CatalogInventory""" module is disabled","Le module ""Mage_CatalogInventory"" est désactivé"
 "The behaviour of this list depends on the value of ""<strong>Complementary Exceptions Handling Mode</strong>""<br />""<strong>Exclude</strong>"" :<br />List here all the grids that should not be rewrited.<br />""<strong>Allow</strong>"" :<br />List here only the grids that should be rewrited. Notice that if the list is empty, no grid at all will be rewrited.<br /><br />Use "" <strong>*</strong> "" to match any number of characters, "" <strong>.</strong> "" to match exactly one character.","Le comportement de cette liste dépend de la valeur de ""<strong>Mode de gestion des exceptions complémentaires</strong>""<br />""<strong>Exclure</strong>"" :<br />Listez ici toutes les grilles qui ne devraient pas être réécrites.<br />""<strong>Autoriser</strong>"" :<br />Listez ici seulement les grilles qui devraient être réécrites. Notez que si la liste est vide, aucune grille ne sera réécrite.<br /><br />Utilisez "" <strong>*</strong> "" pour remplacer n'importe quel nombre de caractères, "" <strong>.</strong> "" pour remplacer exactement un caractère."
 "The block is not valid","Le bloc n'est pas valide"
 "The block collection is not valid","La collection du bloc n'est pas valide"
@@ -382,6 +383,9 @@
 "The options source has been successfully deleted.","La source d'options a bien été effacée."
 "The options source has been successfully saved.","La source d'options a bien été sauvegardée."
 "The product is not associated to the corresponding website","Le produit n'est pas associé au site web correspondant"
+"The quantity is not editable for composite products","La quantité n'est pas éditable pour les produits composés"
+"The quantity is not editable for this product","La quantité n'est pas éditable pour ce produit"
+"The quantity is read-only for this product","La quantité est en lecture seule pour ce produit"
 "The requested attribute renderer does not exist...","Le renderer d'attribut demandé n'existe pas..."
 "The requested column type does not exist...","Le type de colonne demandé n'existe pas"
 "The requested custom column does not exist...","La colonne personnalisée demandée n'existe pas"
