--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -22,6 +22,7 @@
 "Allow","Autoriser"
 "Allow Filtering On Time","Permettre de filtrer sur le temps"
 "An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de commande"
+"Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Apply","Appliquer"
 "Apply Configuration","Appliquer la configuration"
 "Apply PHP function nl2br()","Applique la fonction PHP nl2br()"
@@ -176,6 +177,7 @@
 "Failed to save the value : ""%s""","Echec de la sauvegarde de la valeur : ""%s"""
 "Fax","Fax"
 "Field Name","Nom du champ"
+"Filter","Filtre"
 "Filter images on name","Filtrer les images sur le nom"
 "Filter Mode","Mode de filtrage"
 "Filter on ""Use Config""","Filtrer sur ""Utiliser les paramètres de la configuration"""
@@ -184,15 +186,15 @@
 "Filters","Filtres"
 "First Name","Prénom"
 "Flat Value Key","Clé de la valeur à plat"
-"Format","Format"
-"Format:","Format :"
+"for filtering only","pour filtrage seulement"
 "For sources with multiple levels of options, display labels of all levels, and not just last one","Pour les sources avec des niveaux multiples d'options, affiche les libellés de tous les niveaux plutôt que juste le dernier"
 "Force Custom Value","Forcer la valeur personnalisée"
 "Force Original Value","Forcer la valeur originale"
 "Force use of default options source","Forcer l'utilisation de la source d'options par défaut"
-"Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Forcing a value only applies when it does exist","Forcer une valeur ne s'applique que lorsqu'elle existe"
 "Forcing or merging a value only applies when it does exist","Forcer ou fusionner une valeur ne s'applique que lorsqu'elle existe"
+"Format","Format"
+"Format:","Format :"
 "From Result:","A partir du résultat :"
 "Full","Complet"
 "General","Général"
@@ -212,6 +214,7 @@
 "Height","Hauteur"
 "Help","Aide"
 "ID","ID"
+"If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
 "If no ID is found, then the value corresponding to the given key will be displayed. If none is set, ""store_name"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""store_name"" sera utilisé"
 "If no value is set, "","" will be used","Si aucune valeur n'est définie, "","" sera utilisé"
@@ -224,7 +227,6 @@
 "Images URLs are used as images titles, or as result if images are not displayed or on results export. If you choose ""No"", only the images paths within the media/catalog directory will be displayed.","Les URLs d'images sont utilisées comme titres d'images, ou comme résultat si les images ne sont pas affichées ou à l'export des résultats. Si vous choisissez ""Non"", seulement le chemin des images dans le répertoire media/catalog sera affiché"
 "Image Width","Largeur d'image"
 "Include Inactive Carts","Inclure les paniers inactifs"
-"If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "Indicate here the position of the column among all ones sharing the same field name. If given position does not exist or is empty, then the first corresponding column will be used","Indiquez ici la position de la colonne parmi toutes celles partageant le même nom de champ. Si la position donnée n'existe pas ou est vide, alors la première colonne correspondante sera utilisée"
 "Indicate here the string that will be used to separate categories in each full path. If none is set, "" > "" will be used","Indiquez ici la chaîne qui sera utilisée pour séparer les catégories dans chaque chemin complet. Si aucune n'est définie, "" > "" sera utilisé"
 "Indicate here the string that will be used each product's category values. If none is set, "", "" will be used","Indiquez ici la chaîne qui sera utilisée pour séparer les valeurs des catégories de chaque produit. Si aucune n'est définie, "", "" sera utilisé"
