added possibility to filter on name and SKU for the order items custom column

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -21,6 +21,7 @@
 "All (%s)","Tous (%s)"
 "Allow","Autoriser"
 "Allow Filtering On Time","Permettre de filtrer sur le temps"
+"Allow SQL Wildcards In Filter","Autoriser les wildcards SQL dans le filtre"
 "An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de commande"
 "Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Apply","Appliquer"
@@ -167,6 +168,8 @@
 "Exceptions List","Liste des exceptions"
 "Exclude","Exclure"
 "Exclude Child Items","Exclure les articles enfants"
+"Exclude Child Items From Filter","Exclure les articles enfants du filtrage"
+"Existent","Existante"
 "existing","existants"
 "BL_CustomGrid::Export","Exporter"
 "BL_CustomGrid::Export:","Exporter :"
@@ -181,6 +184,8 @@
 "Filter images on name","Filtrer les images sur le nom"
 "Filter Mode","Mode de filtrage"
 "Filter on ""Use Config""","Filtrer sur ""Utiliser les paramètres de la configuration"""
+"Filter on Item Name","Filtrer sur le nom des articles"
+"Filter on Item SKU","Filtrer sur la référence des articles"
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""Custom Filter - Operator"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cette valeur et celle du champ ""Filtre personnalisé - Opérateur"""
 "Filtered products will have to belong to a number of categories amongst the chosen ones, that can be verified using this value and the one from the ""Custom Filter - Number"" field","Les produits filtrés devront appartenir à un nombre de catégories parmi celles choisies, qui peut être vérifié en utilisant cet opérateur et celle du champ ""Filtre personnalisé - Nombre"""
 "Filters","Filtres"
