new custom column : customizable list of items for the orders grid (extensible)

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -22,7 +22,7 @@
 "Allow","Autoriser"
 "Allow Filtering On Time","Permettre de filtrer sur le temps"
 "Allow SQL Wildcards In Filter","Autoriser les wildcards SQL dans le filtre"
-"An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de commande"
+"An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de la commande"
 "Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Apply","Appliquer"
 "Apply Configuration","Appliquer la configuration"
@@ -105,6 +105,7 @@
 "Customer Groups","Groupes de client"
 "Customers","Clients"
 "Customer Edit Tab","Onglet de la fiche client"
+"Customizable","Personnalisable"
 "Customization : %s","Personnalisation : %s"
 "Customization Parameters","Paramètres de personnalisation"
 "Customize Columns","Personnaliser les colonnes"
@@ -124,6 +125,7 @@
 "Disabled","Désactivé"
 "Disable","Désactiver"
 "Discovery Mode","Mode découverte"
+"Display ""%s""","Afficher ""%s"""
 "Display Complete Images URLs","Afficher les URLs d'images complètes"
 "Display Currency","Devise d'affichage"
 "Display Format","Format d'affichage"
