added ability to hide the header for the customizable order items list

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -54,6 +54,7 @@
 "Choose","Choisir"
 "Choose ""Yes"" if the field contains multiple values separated by a given string","Choisissez ""Oui"" si le champ contient de multiples valeurs séparées par une chaîne donnée"
 "Choose ""Yes"" if the filter must match the entire value, and not just be contained within","Choisissez ""Oui"" si le filtre doit correspondre à la valeur entière, et pas seulement être contenu dedans"
+"Choose ""Yes"" if you do not want the field labels to be displayed in the header","Choissez ""Oui"" si vous ne voulez pas que les libellés des champs soient affichés en en-tête"
 "Choose ""Yes"" to display IDs instead of names","Choisissez ""Oui"" pour afficher les identifiants plutôt que les noms"
 "Choose ""Yes"" to filter values that either use config or not. Else, the filter type will depend on the type of the field","Choisissez ""Oui"" pour filtrer les valeurs qui utilisent les paramètres de la configuration ou pas. Sinon, le type de filtre dépendra du type du champ"
 "Choose Categories To Filter","Choisir les catégories à filtrer"
@@ -220,6 +221,7 @@
 "Group","Groupe"
 "Height","Hauteur"
 "Help","Aide"
+"Hide Header","Cacher l'en-tête"
 "ID","ID"
 "If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
