added changes missing in the previous commit

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -23,6 +23,7 @@
 "Allow Filtering On Time","Permettre de filtrer sur le temps"
 "Allow SQL Wildcards In Filter","Autoriser les wildcards SQL dans le filtre"
 "An error occured while initializing order items","Une erreur est survenue à l'initialisation des articles de la commande"
+"An error occured while initializing items block","Une erreur est survenue à l'initialisation du bloc des articles"
 "Applies by default the use of an ""options"" renderer with customer group values (still overridable by rendering options)","Applique par défaut l'utilisation d'un rendu ""Options"" avec les valeurs des groupes client (écrasable par les options de rendu)"
 "Apply","Appliquer"
 "Apply Configuration","Appliquer la configuration"
@@ -294,6 +295,7 @@
 "Options Separator","Séparateur d'options"
 "Options Source","Source d'options"
 "Options Source Creation Settings","Paramètres de création de source d'options"
+"Order Amounts","Montants de commande"
 "Order View Tab","Onglet de la fiche commande"
 "Orders","Commandes"
 "Origin","Origine"
