added new column renderer : EU country + some small fixes

--- a/app/locale/fr_FR/BL_CustomGrid.csv
+++ b/app/locale/fr_FR/BL_CustomGrid.csv
@@ -38,8 +38,10 @@
 "Attribute Code","Code attribut"
 "Attributes Values Rendering","Rendu des valeurs d'attributs"
 "Auto-generated","Auto-généré"
+"Available variables : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(variables will be replaced by the corresponding values).<br />If no value is set, ""{is_eu_country}"" will be used by default","Variables disponibles : <strong>{is_eu_country}</strong>, <strong>{country_code}</strong>, <strong>{country_name}</strong><br />(les variables seront remplacées par les valeurs correspondantes).<br />Si aucune valeur n'est renseignée, ""{is_eu_country}"" sera utilisé par défaut"
 "Back","Retour"
 "Base Class","Classe de base"
+"Base Display Format","Format d'affichage de base"
 "Billing Address","Adresse de facturation"
 "Block ID","ID bloc"
 "Block Type","Type de bloc"
@@ -58,6 +60,7 @@
 "Choose ""Yes"" if you do not want the field labels to be displayed in the header","Choissez ""Oui"" si vous ne voulez pas que les libellés des champs soient affichés en en-tête"
 "Choose ""Yes"" to display IDs instead of names","Choisissez ""Oui"" pour afficher les identifiants plutôt que les noms"
 "Choose ""Yes"" to filter values that either use config or not. Else, the filter type will depend on the type of the field","Choisissez ""Oui"" pour filtrer les valeurs qui utilisent les paramètres de la configuration ou pas. Sinon, le type de filtre dépendra du type du champ"
+"Choose ""Yes"" to use a custom source of EU countries.<br /><strong>For Magento versions < 1.7, you should always use this option as there is no base EU countries list by default</strong>","Choisissez ""Oui"" pour utiliser une source personnalisée de pays de l'UE.<br /><strong>Pour les versions de Magento < 1.7, vous devriez toujours utiliser cette option étant donné qu'il n'existe aucune liste de pays de l'UE par défaut</strong>"
 "Choose Categories To Filter","Choisir les catégories à filtrer"
 "Choose Editable Columns","Choisir les colonnes éditables"
 "Choose Default Profile","Choisir le profil par défaut"
@@ -103,6 +106,7 @@
 "Custom Grids","Grilles personnalisées"
 "Custom Grids Configuration","Configuration des grilles personnalisées"
 "Custom List","Liste personnalisée"
+"Custom Source","Source personnalisée"
 "Customer","Client"
 "Customer Groups","Groupes de client"
 "Customers","Clients"
@@ -152,6 +156,7 @@
 "Displays the same items list as the order view page","Affiche la même liste d'articles que la fiche de commande"
 "Displays the status and colorizes the row","Affiche le statut et colorise la ligne"
 "Displays the order's store view","Affiche la vue magasin de la commande"
+"Displays whether a country belongs to the EU","Affiche si un pays appartient à l'UE"
 "Drag'n'drop is the most convenient way for sorting columns, but imposes their order number, and may be slow in some cases.<br />Choose ""<strong>No</strong>"" to specify columns orders numbers directly in corresponding text fields.","Le drag'n'drop est la manière la plus commode de trier les colonnes, mais impose leur numéro d'ordre, et peut être lent dans certains cas.<br />Choisissez ""<strong>Non</strong>"" pour spécifier les numéros d'ordre de colonnes directement dans les champs texte correspondants."
 "Duplicated","Dupliqués"
 "Edit","Editer"
@@ -160,6 +165,7 @@
 "Edit Value","Editer la valeur"
 "Editable","Editable"
 "Editor - Grid Type : Google Sitemap","Editeur - Type de grille : plan de site Google"
+"Eg : ""general/country/eu_countries""","Exemple : ""general/country/eu_countries"""
 "Eg : simple products associated to their configurable parents","Exemple : produits simples associés à leurs parents configurables"
 "Email","Email"
 "Enable","Activer"
@@ -167,6 +173,8 @@
 "Enabled/Disabled","Activé/Désactivé"
 "Equal","Egal"
 "Escape HTML","Echapper le HTML"
+"EU Countries","Pays de l'UE"
+"EU Country","Pays de l'UE"
 "Exact Filter","Filtre exact"
 "Exceptions Handling Mode","Mode de gestion des exceptions"
 "Exceptions List","Liste des exceptions"
@@ -177,6 +185,7 @@
 "existing","existants"
 "BL_CustomGrid::Export","Exporter"
 "BL_CustomGrid::Export:","Exporter :"
+"Export Display Format","Format d'affichage à l'export"
 "Export Results","Exporter les résultats"
 "Failed to edit value","Echec de l'édition de la valeur"
 "Failed to edit the value : ""%s""","Echec de l'édition de la valeur : ""%s"""
@@ -227,7 +236,8 @@
 "If needed, indicate here the level on which to stop ascent for the full paths display. One level will be displayed in all cases, even if the concerned category has a lower level","Si besoin, indiquez ici le niveau sur lequel arrêter la remontée dans les chemins complets. Un niveau sera affiché dans tous les cas, même si la catégorie concernée a un niveau inférieur"
 "If no currency is found with choosen column, then base currency will be used","Si aucune devise n'est trouvée avec la colonne choisie, alors la devise de base sera utilisée"
 "If no ID is found, then the value corresponding to the given key will be displayed. If none is set, ""store_name"" will be used","Si aucun identifiant n'est trouvé, alors la valeur correspondant à la clé donnée sera affichée. Si rien n'est renseigné, ""store_name"" sera utilisé"
-"If no value is set, "","" will be used","Si aucune valeur n'est définie, "","" sera utilisé"
+"If no value is set, "","" will be used","Si aucune valeur n'est renseignée, "","" sera utilisé"
+"If no value is set, then the base display format will be used","Si aucune valeur n'est renseignée, le format d'affichage de base sera utilisé"
 "If you choose ""No"", filter will apply on images existence","Si vous choisissez ""Non"", le filtre s'appliquera à l'existence des images"
 "If you choose ""No"", only images names will be displayed","Si vous choisissez ""Non"", seulement les noms d'images seront affichés"
 "If you choose ""Yes"", the images / names will point to the original images URLs.","Si vous choisissez ""Oui"", les images / noms pointeront vers les URLs des images originales"
@@ -373,6 +383,8 @@
 "Suffix","Suffixe"
 "Suffix that will be appended to the values coming from config","Suffixe qui sera ajouté aux valeurs venant de la configuration"
 "System","Système"
+"System Configuration Source","Source de la configuration système"
+"System Configuration Source Path","Chemin de la source de la configuration système"
 "Tax Classes","Classes de taxe"
 "Tax Rates","Taux de taxe"
 "Tax Rules","Règles de taxe"
